# leanframe

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.rst  GEMINI.md  MANIFEST.in  README.md  README.rst  main.py  noxfile.py  pyproject.toml  setup.py
.github/workflows/: lint.yml  mypy.yml  unittest.yml
demos/: FIXING_DUCKDB_TABLE_ERROR.md  NESTED_JOINS_STRATEGY.md  README.md  demo_dynamic_nested_handler.py  demo_flexible_joins.py  demo_indexing_with_nested.py  demo_nested_handler_backend.py
demos/utils/: create_data.py  create_nested_data.py
docs/: indexing_README.md  indexing_guide.md  indexing_implementation.md  indexing_quick_ref.md
docs/architecture/: NESTED_HANDLER_VISION.md  backend_reference_management.md
leanframe/: __init__.py  aggregations.py  bigframes.py  dataframe.py  dtypes.py  indexers.py  ordering.py  remote_function.py  scalar.py  series.py  session.py  version.py
leanframe/core/: __init__.py  array_value.py  blocks.py  dtypes.py  expression.py  frame.py  indexing.py  nested_handler.py  ordering.py  series.py  session.py  type_checks.py  utils.py
leanframe/docs/: DYNAMIC_HANDLER_README.md
leanframe/ml/: __init__.py  api_primitives.py  cluster.py  compose.py  core.py  decomposition.py  linear_model.py  llm.py  loader.py  metrics.py  model_selection.py  pipeline.py  preprocessing.py  sql.py
leanframe/operations/: base.py  (+3 more)
specs/: 2025-08-04-dtypes.md  2025-08-04-github-actions.md  2025-09-16-series-methods.md  2025-10-27-dataframe-methods.md  TEMPLATE.md
tests/: test_to_ibis.py
vault/: dataframe.py  nesteddataframe.py  test_nested.py
(+31 files in other folders)
