[project]
name = "leanframe"
version = "0.1.0"
description = "LeanFrame is a pandas-like API built on top of Ibis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas >=2.2.0",
    "pyarrow >=15.0.2",
    "ibis-framework>=10.3.1,<11.0.0",
]

[dependency-groups]
dev = [
    "ibis-framework[duckdb]>=10.6.0",
    "ipython>=8.37.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./"]
include = ["leanframe"]
