[project]
name = "leanframe"
version = "0.1.0"
description = "LeanFrame is a pandas-like API built on top of Ibis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas >=2.2.0",
    "pyarrow >=15.0.2",
    "ibis-framework>=11.0.0,<12.0.0",
]

[dependency-groups]
dev = [
    "ibis-framework[duckdb]>=10.6.0",
    "ipython>=8.37.0",
    "mypy>=1.17.1",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./"]
include = ["leanframe"]

[tool.ruff]
exclude = ["scratch", "vault"]
